--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
             margin-bottom: 40px;
             border-radius: 10px;
+            width: 80%;
+            margin: auto;
+            overflow: hidden;
         }
 
         .category {
