--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
         <div class="header-container">
             <div id="welcome-banner">Salut moi c'est Bertin, bienvenue sur ma page</div>
             <div class="profile-pic-container" onclick="openModal()">
-                <img src="images\profile-picture.JPG" alt="Photo de profil" class="profile-pic">
+                <img src="images/profile-picture.JPG" alt="Photo de profil" class="profile-pic">
             </div>
             <div id="second-banner">Tu peux retrouvrer ici des infos me concernant ! Clique sur ma photo pour avoir mes contacts </div>
         </div> 
