--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Mon Profil</title>
+    <meta name="description" content="voici le profile de Bertin Briffaz">
+    <title>Bertin BRIFFAZ, mon Profil</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <style>
         body, h1, p {
